codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__question_capped_other.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
expression: buffer_text(&buffer)
---

  Second

    1. A suggested answer that is long enough to
       wrap across multiple rows
  › 2. long draft
       long draft
       long draft
       long draft
       long draft
       long draft
       long draft


  enter submit   ⌃] skip   ⌥↓ main prompt
