codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__question_named_other.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
expression: buffer_text(&buffer)
---

  2 of 2
  Second

  › 1. Other
    2. Other (write an answer)

  enter submit   ⌃] skip   ⌥↓ prev question
