codex-rs/tui/src/bottom_pane/async_questions/snapshots/codex_tui__bottom_pane__async_questions__tests__question_options_width_boundary.snap
---
source: tui/src/bottom_pane/async_questions/state_tests.rs
expression: "format!(\"Full height:\\n{}\\n\\nClipped:\\n{}\", buffer_text(&buffer),\nbuffer_text(&clipped),)"
---
Full height:

  Second

  › 1. abcdefgh
       ijklmno
    2. pqrstuvw
       xyzabcd
    3. Other

  enter submit
  ⌃] skip
  ⌥↓ main prompt


Clipped:

  Second
  › 1. abcdefgh
